# kit

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/concepts/: orchestrator-vs-narrator-meta.html  orchestrator-vs-narrator-meta.md  orchestrator-vs-narrator.html
docs/concepts/_design/: kit-spec-stil.md  narrator-presentation-spec.md
docs/guides/: adding-a-tool.md
docs/plans/: 2026-03-25-kit-implementation.md  2026-03-26-calendar-travel-planner.md
docs/specs/: 2026-03-25-kit-toolbox-design.md  2026-03-26-kit-watch-price-monitor.md  2026-04-18-cross-tool-integration-hooks.md  2026-04-18-kit-flights-ryanair.md  2026-04-18-kit-youtube-transcript.md  spec-preview.html
src/kit/: __init__.py  cli.py  config.py  errors.py  integrations.py  mcp_server.py  plan_day_cmd.py  setup_cmd.py
src/kit/cal/: __init__.py  commands.py  core.py  google_cal.py  mcp_tools.py
src/kit/docs/: __init__.py  commands.py  core.py
src/kit/flights/: __init__.py  commands.py  core.py  mcp_tools.py  planner.py  ryanair.py
src/kit/pdf/: __init__.py  commands.py  core.py
tests/: conftest.py  test_cal_cli.py  test_cal_core.py  test_cal_mcp_tools.py  test_cli.py  test_config.py  test_deep_links.py  test_flights_core.py  test_flights_planner.py  test_flights_ryanair.py  test_formatting.py  test_geo.py  test_google_cal.py  test_google_maps.py  test_mcp_flights.py  test_mcp_server.py  test_mcp_youtube.py  test_planner.py  test_route_core.py  test_setup_cmd.py  test_youtube_client.py  test_youtube_core.py  test_youtube_planner.py
tests/docs/: test_core.py
(+15 files in other folders)
