[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kit"
version = "0.1.0"
description = "Agentic-ready personal CLI toolbox with MCP Server"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "Paul Fiedler" }]
dependencies = [
    "typer[all]>=0.9",
    "pydantic>=2.0",
    "rich>=13.0",
    "googlemaps>=4.10",
    "google-api-python-client>=2.0",
    "google-auth-oauthlib>=1.0",
    "google-auth>=2.0",
    "mcp>=1.0",
    "dateparser>=1.2",
    "tomli-w>=1.0",
    "httpx>=0.27",
    "youtube-transcript-api>=1.0",
    "pdfplumber>=0.11",
    "pypdf>=5.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-vcr>=1.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.scripts]
kit = "kit.cli:app"
kit-mcp = "kit.mcp_server:run"

[tool.hatch.build.targets.wheel]
packages = ["src/kit"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = ["smoke: real API calls (deselect with '-m not smoke')"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]
